<resources>

    <!-- Splash Screen -->
    <string name="app_name">urest</string>
    <string name="slogan">Encuentra tu sitio ideal</string>

    <!-- Lista de restaurantes -->
    <string name="search">Encuentra los mejores restaurantes</string>
    <string name="tipo_rest">Restaurante - Bar</string>
    <string name="nombre_rest">RESTAURANT D ORD</string>
    <string name="promedio_rest">12,00 B/</string>
    <string name="horario_rest">Horario: 11:00 a.m a 10:30 p.m.</string>
    <string name="fav_rest">359</string>
</resources>
